==> peng-zhihui/Ctrl-FOC-Lite/2.Firmware/CLion/Ctrl-FOC-Lite-fw/lib/Arduino-FOC/src/drivers/hardware_specific/stm32_mcu.cpp <==
#include "../hardware_api.h"
#define _PWM_RESOLUTION 12 // 12bit
#define _PWM_RANGE 4095.0// 2^12 -1 = 4095
#define _PWM_FREQUENCY 25000 // 25khz
#define _PWM_FREQUENCY_MAX 50000 // 50khz
#define _HARDWARE_6PWM 1
#define _SOFTWARE_6PWM 0
#define _ERROR_6PWM -1

void _setPwm(int ulPin, uint32_t value, int resolution)
{
    PinName pin = digitalPinToPinName(ulPin);
    TIM_TypeDef *Instance = (TIM_TypeDef *) pinmap_peripheral(pin, PinMap_PWM);
    uint32_t index = get_timer_index(Instance);
    HardwareTimer *HT = (HardwareTimer *) (HardwareTimer_Handle[index]->__this);

    uint32_t channel = STM_PIN_CHANNEL(pinmap_function(pin, PinMap_PWM));
    HT->setCaptureCompare(channel, value, (TimerCompareFormat_t) resolution);
}

void _configure2PWM(long pwm_frequency, const int pinA, const int pinB)
{
    if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = _PWM_FREQUENCY; // default frequency 25khz
    else pwm_frequency = _constrain(pwm_frequency, 0, _PWM_FREQUENCY_MAX); // constrain to 50kHz max
    // center-aligned frequency is uses two periods
    pwm_frequency *= 2;

    HardwareTimer *HT1 = _initPinPWM(pwm_frequency, pinA);
    HardwareTimer *HT2 = _initPinPWM(pwm_frequency, pinB);
    // allign the timers
    _alignPWMTimers(HT1, HT2, HT2);
}

void _configure3PWM(long pwm_frequency, const int pinA, const int pinB, const int pinC)
{
    if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = _PWM_FREQUENCY; // default frequency 25khz
    else pwm_frequency = _constrain(pwm_frequency, 0, _PWM_FREQUENCY_MAX); // constrain to 50kHz max
    // center-aligned frequency is uses two periods
    pwm_frequency *= 2;

    HardwareTimer *HT1 = _initPinPWM(pwm_frequency, pinA);
    HardwareTimer *HT2 = _initPinPWM(pwm_frequency, pinB);
    HardwareTimer *HT3 = _initPinPWM(pwm_frequency, pinC);
    // allign the timers
    _alignPWMTimers(HT1, HT2, HT3);
}

void _configure4PWM(long pwm_frequency, const int pinA, const int pinB, const int pinC, const int pinD)
{
    if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = _PWM_FREQUENCY; // default frequency 25khz
    else pwm_frequency = _constrain(pwm_frequency, 0, _PWM_FREQUENCY_MAX); // constrain to 50kHz max
    // center-aligned frequency is uses two periods
    pwm_frequency *= 2;

    HardwareTimer *HT1 = _initPinPWM(pwm_frequency, pinA);
    HardwareTimer *HT2 = _initPinPWM(pwm_frequency, pinB);
    HardwareTimer *HT3 = _initPinPWM(pwm_frequency, pinC);
    HardwareTimer *HT4 = _initPinPWM(pwm_frequency, pinD);
    // allign the timers
    _alignPWMTimers(HT1, HT2, HT3, HT4);
}

void _writeDutyCycle2PWM(float dc_a, float dc_b, int pinA, int pinB)
{
    // transform duty cycle from [0,1] to [0,4095]
    _setPwm(pinA, _PWM_RANGE * dc_a, _PWM_RESOLUTION);
    _setPwm(pinB, _PWM_RANGE * dc_b, _PWM_RESOLUTION);
}

void _writeDutyCycle3PWM(float dc_a, float dc_b, float dc_c, int pinA, int pinB, int pinC)
{
    // transform duty cycle from [0,1] to [0,4095]
    _setPwm(pinA, _PWM_RANGE * dc_a, _PWM_RESOLUTION);
    _setPwm(pinB, _PWM_RANGE * dc_b, _PWM_RESOLUTION);
    _setPwm(pinC, _PWM_RANGE * dc_c, _PWM_RESOLUTION);
}

void _writeDutyCycle4PWM(float dc_1a, float dc_1b, float dc_2a, float dc_2b, int pin1A, int pin1B, int pin2A, int pin2B)
{
    // transform duty cycle from [0,1] to [0,4095]
    _setPwm(pin1A, _PWM_RANGE * dc_1a, _PWM_RESOLUTION);
    _setPwm(pin1B, _PWM_RANGE * dc_1b, _PWM_RESOLUTION);
    _setPwm(pin2A, _PWM_RANGE * dc_2a, _PWM_RESOLUTION);
    _setPwm(pin2B, _PWM_RANGE * dc_2b, _PWM_RESOLUTION);
}
