==> peng-zhihui/Ctrl-FOC-Lite/2.Firmware/CLion/Ctrl-FOC-Lite-fw/lib/Arduino-FOC/src/drivers/hardware_specific/due_mcu.cpp <==
#include "../hardware_api.h"

void setPwm(uint32_t ulPin, uint32_t ulValue) {
  // check pin type
  uint32_t attr = g_APinDescription[ulPin].ulPinAttribute;
  if ((attr & PIN_ATTR_PWM) == PIN_ATTR_PWM) { // if pwm
    uint32_t chan = g_APinDescription[ulPin].ulPWMChannel;
    PWMC_SetDutyCycle(PWM_INTERFACE, chan, ulValue);
    return;
  }

  if ((attr & PIN_ATTR_TIMER) == PIN_ATTR_TIMER) { // if timer pin
    // get the timer variables 
    ETCChannel channel = g_APinDescription[ulPin].ulTCChannel;
    Tc *chTC = channelToTC[channel];
    uint32_t chNo = channelToChNo[channel];
    if(!ulValue) {
      // if the value 0 disable counter
      if (channelToAB[channel])
        TC_SetCMR_ChannelA(chTC, chNo, TC_CMR_ACPA_CLEAR | TC_CMR_ACPC_CLEAR);
      else
        TC_SetCMR_ChannelB(chTC, chNo, TC_CMR_BCPB_CLEAR | TC_CMR_BCPC_CLEAR);
    }else{
      // if the value not zero
      // calculate clock
      const uint32_t TC = VARIANT_MCK / 2 / _pwm_frequency;
      // Map value to Timer ranges 0..max_duty_cycle => 0..TC
      // Setup Timer for this pin
      ulValue = ulValue * TC;
      pwm_counter_vals[channel] = ulValue / _max_pwm_value;
      // enable counter
      if (channelToAB[channel])
        TC_SetCMR_ChannelA(chTC, chNo, TC_CMR_ACPA_CLEAR | TC_CMR_ACPC_SET);
      else
        TC_SetCMR_ChannelB(chTC, chNo, TC_CMR_BCPB_CLEAR | TC_CMR_BCPC_SET);
    }
    
    return;
  }
}

void _configure3PWM(long pwm_frequency,const int pinA, const int pinB, const int pinC) {
  if(!pwm_frequency || !_isset(pwm_frequency) ) pwm_frequency = 35000; // default frequency 50khz
  else pwm_frequency = _constrain(pwm_frequency, 0, 50000); // constrain to 50kHz max
  // save the pwm frequency
  _pwm_frequency = pwm_frequency;
  // cinfigure pwm pins
  initPWM(pinA, _pwm_frequency);
  initPWM(pinB, _pwm_frequency);
  initPWM(pinC, _pwm_frequency);
  // sync the timers if possible
  syncTimers(pinA, pinB, pinC);
}

void _configure2PWM(long pwm_frequency, const int pinA, const int pinB) {
  if(!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = 35000; // default frequency 50khz
  else pwm_frequency = _constrain(pwm_frequency, 0, 50000); // constrain to 50kHz max
  // save the pwm frequency
  _pwm_frequency = pwm_frequency;
  // cinfigure pwm pins
  initPWM(pinA, _pwm_frequency);
  initPWM(pinB, _pwm_frequency);
  // sync the timers if possible
  syncTimers(pinA, pinB);
}

void _configure4PWM(long pwm_frequency,const int pinA, const int pinB, const int pinC, const int pinD) {
  if(!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = 35000; // default frequency 50khz
  else pwm_frequency = _constrain(pwm_frequency, 0, 50000); // constrain to 50kHz max
  // save the pwm frequency
  _pwm_frequency = pwm_frequency;
  // cinfigure pwm pins
  initPWM(pinA, _pwm_frequency);
  initPWM(pinB, _pwm_frequency);
  initPWM(pinC, _pwm_frequency);
  initPWM(pinD, _pwm_frequency);
  // sync the timers if possible
  syncTimers(pinA, pinB, pinC, pinD);
}

void _writeDutyCycle3PWM(float dc_a,  float dc_b, float dc_c, int pinA, int pinB, int pinC){
  // transform duty cycle from [0,1] to [0,_max_pwm_value]
  setPwm(pinA, _max_pwm_value*dc_a);
  setPwm(pinB, _max_pwm_value*dc_b);
  setPwm(pinC, _max_pwm_value*dc_c);
}

void _writeDutyCycle4PWM(float dc_1a,  float dc_1b, float dc_2a, float dc_2b, int pin1A, int pin1B, int pin2A, int pin2B){
  // transform duty cycle from [0,1] to [0,_max_pwm_value]
  setPwm(pin1A, _max_pwm_value*dc_1a);
  setPwm(pin1B, _max_pwm_value*dc_1b);
  setPwm(pin2A, _max_pwm_value*dc_2a);
  setPwm(pin2B, _max_pwm_value*dc_2b);
}

void  _writeDutyCycle2PWM(float dc_a,  float dc_b, int pinA, int pinB){
  // transform duty cycle from [0,1] to [0,_max_pwm_value]
  setPwm(pinA, _max_pwm_value*dc_a);
  setPwm(pinB, _max_pwm_value*dc_b);
}
